--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -2,7 +2,18 @@
 .tile{
     color: white;
 }
-
+.background-yellow{
+    background-color: rgb(181, 159, 59);
+}
+.background-grey{
+    background-color: rgb(58, 58, 60);
+}
+.background-green{
+    background-color: rgb(83, 141, 78);
+}
+.background-black{
+    background-color: #121513;
+}
 .grid-container{
     display: flex;
     margin-top: 50px;
@@ -22,10 +33,20 @@
         flex-direction: row;
 
         .tile{
+            text-align: center;
+            display:flex;
+            align-items: center;
+            justify-content: center;
             height: 50px;
             margin: 2.5px;
             width:50px;
             border: 2px solid #565758;
+            color: rgb(255, 255, 255);
+            font-size: 2rem;
+            font-size: 32px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: 700;
+            text-transform: uppercase;
         }
     }
 }
