--- a/src/styles/wordle.css
+++ b/src/styles/wordle.css
@@ -1,3 +1,20 @@
 html{
     background-color: rgb(18, 18, 19);
 }
+.Winner{
+    color: green;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.losser{
+    color: red;
+    margin-top: 30px;
+    text-align: center;
+}
+.flash{
+    color: white;
+    border: white;
+    margin-top: 30px;
+    text-align: center;
+}
