--- a/src/styles/gamesec.scss
+++ b/src/styles/gamesec.scss
@@ -16,8 +16,8 @@ html, body {
     padding: 20px;
     border-radius: 8px; /* Rounded corners for smoother look */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
-    width: 300px; /* Fixed width for the container */
-    height: 400px; /* Set a fixed height to prevent it from expanding too much */
+    width: 500px; /* Fixed width for the container */
+    height: 600px; /* Set a fixed height to prevent it from expanding too much */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -48,6 +48,9 @@ button {
     border: none;
     border-radius: 5px;
     font-size: 18px;
+    padding: 5px;
+    margin-top: 50px;
+    margin-bottom: 100px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
